<resources>
    <string name="app_name">RFTarea2ModuloVI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="troop">troop</string>
    <string name="type_troop_title">Tropa:</string>
    <string name="title_target">Objetivo Preferido:</string>
    <string name="title_damage">Tipo Daño:</string>
    <string name="title_space">Espacio en vivienda:</string>
    <string name="title_speed">Velocidad de movimiento:</string>
    <string name="title_attack_speed">Velocidad de Ataque:</string>
    <string name="title_range">Rango:</string>
    <string name="levels_text">%1$s-%2$s</string>
    <string name="message_detail_error">"Hubo un error al cargar detalle de tropas."</string>
    <string name="message_list_error">"Hubo un error al cargar lista de tropas."</string>
    <string name="troop_aspects">Troop aspects</string>
    <string name="aspectos_por_nivel">Aspectos Por Nivel</string>
    <string name="troop_image">Troop Image</string>
    <string name="known_bases">Bases Conocidas</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="new_user">Crear Cuenta</string>
    <string name="singup">Crear Cuenta</string>
    <string name="forget_password">Olvidate tu contraseña?</string>
    <string name="success_auth">Autenticación exitosa.</string>
    <string name="cancel">Cancelar</string>
    <string name="reset_password">Restablecer contraseña</string>
    <string name="message_reset_password">Ingrese su correo para recibir el enlace para cambiar contraseña.</string>
    <string name="reset_password_success">Enlace enviado.</string>
    <string name="reset_password_error">Error al enviar enlace.</string>
    <string name="no_valid_email">Ingrese un email valido.</string>
    <string name="weak_password">La contraseña debe de tener por lo menos 6 caracteres</string>
    <string name="no_network">Red no disponible o se interrumpió la conexión</string>
    <string name="auth_error">Error. No se pudo autenticar exitosamente.</string>
    <string name="weak_password_message">La contraseña porporcionada es inválida</string>
    <string name="not_found_user_message">Error: No existe el usuario con la información proporcionada.</string>
    <string name="expired_session_message">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="email_already_in_use_message">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="email_aready_in_use">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="wrong_credentials_message">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="wrong_password">La contraseña no es válida</string>
    <string name="wrong_password_message">Error: La contraseña no es válida</string>
    <string name="wrong_email_message">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="wrong_email">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="email_required">Se requiere el correo</string>
    <string name="email_no_valid">El correo no tiene un formato válido</string>
    <string name="password_required">Se requiere una contraseña</string>
    <string name="verification_email_send">El correo de verificacion ha sido enviado</string>
    <string name="verification_email_error">No se pudo enviar el correo de verificación</string>
    <string name="user_created">Usuario Creado</string>
</resources>