<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.fragments.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".2"
        android:orientation="horizontal"
        android:id="@+id/glTop"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glTop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@drawable/layout_bg"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="25dp"
            android:id="@+id/Container"
            >

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="15dp"
                android:orientation="vertical"
                android:id="@+id/glMarginLeft"
                />

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_end="15dp"
                android:orientation="vertical"
                android:id="@+id/glMarginRight"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/glMarginLeft"
                app:layout_constraintEnd_toEndOf="@+id/glMarginRight"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="28sp"
                android:layout_marginTop="20dp"
                android:id="@+id/tvTitle"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/glMarginLeft"
                app:layout_constraintEnd_toEndOf="@+id/glMarginRight"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:id="@+id/tietUser"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/textFieldUser"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/glMarginLeft"
                app:layout_constraintEnd_toEndOf="@+id/glMarginRight"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:id="@+id/tietPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent=".5"
                android:orientation="vertical"
                android:id="@+id/glCenter"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/btLogin"
                app:layout_constraintTop_toBottomOf="@+id/textFieldPassword"
                app:layout_constraintStart_toStartOf="@+id/glMarginLeft"
                app:layout_constraintEnd_toEndOf="@+id/glCenter"
                app:cornerRadius="5dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/bold_color_stats"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btLogin"
                app:layout_constraintStart_toStartOf="@+id/glMarginLeft"

                android:layout_marginTop="20dp"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:id="@+id/tvForgotPassword"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textFieldPassword"
                app:layout_constraintEnd_toEndOf="@+id/glMarginRight"
                app:layout_constraintStart_toStartOf="@+id/glCenter"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                app:cornerRadius="5dp"
                android:backgroundTint="@color/bold_color"
                android:text="@string/new_user"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:id="@+id/tvSingup"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>